--- a/.env
+++ b/.env
@@ -1,16 +1,19 @@
-   # Server Configuration
-   NODE_ENV=development
-   PORT=5000
+# Server Configuration
+NODE_ENV=development
+PORT=5000
 
-   # Session Configuration
-   SESSION_SECRET=your-secure-session-secret-here
+# Database Configuration
+DATABASE_URL=your-database-url-here
 
-   # CORS Configuration
-   ALLOWED_ORIGINS=http://localhost:5000
+# Session Configuration
+SESSION_SECRET=your-secure-session-secret-here
 
-   # Database Configuration
-   DATABASE_URL=your-database-url-here
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:5000
 
-   # Security
-   RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
-   RATE_LIMIT_MAX_REQUESTS=100
+# Sentry Configuration
+SENTRY_DSN=your-sentry-dsn-here
+
+# Security
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
